--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
+<html>
 <head>
   <meta charset="utf-8">
   <title>DOMcraft</title>
   <meta name="description" content="Explorative two dimensional game made entirely with, explore the dome, mine the DOM">
   <meta name="author" content="DrummerHead">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <link rel="stylesheet" href="s.css">
 </head>
 
@@ -15,3 +16,5 @@
 
 <script src="jquery-1.6.2.min.js"></script>
 <script src="dc.js"></script>
+<!--<script src="https://getfirebug.com/firebug-lite.js"></script>-->
+</html>
